Add paparazzi plugin